# neuro_mine

./: .gitignore  .readthedocs.yaml  LICENSE  MINE_fit_test_responses_run_config.json  MINE_interaction-hypothesis_responses_run_config.json  MINE_responses_sertraline-hyp-20250709-warner-01_Z_0_run_config.json  README.md  constraints.txt  constraints_intel_mac.txt  fit_test_responses.hdf5  pyproject.toml
docs/: conf.py  index.rst
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/_build/html/.doctrees/: environment.pickle  index.doctree
neuro_mine/: __init__.py  main.py
neuro_mine/lib/: file_handling.py  mine.py  model.py  options.py  processing.py  taylorDecomp.py  utilities.py
neuro_mine/lib/upsetplot/: __init__.py  data.py  plotting.py  reformat.py  util.py
neuro_mine/scripts/: app_gui.py  convert_suite2p.py  data_diagnostics.py  file_handling.py  mine.py  model.py  neuromine_fit.py  neuromine_prediction.py  neuromine_timetrial.py  neuromine_train.py  predict_gui.py  process_csv.py  processing.py  response_prediction.py  taylorDecomp.py  utilities.py
neuro_mine/ui/: app_gui.py  form.ui  mine_fit.py  mine_fit.ui  mine_form.py  mine_form.ui  mine_predict.py  mine_predict.ui  mine_train.py  mine_train.ui  predict_gui.py  train_gui.py  ui_form.py  ui_utilities.py
