[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neuro_mine"
version = "0.2.8"
description = "Identifies the contribution of behavioural and stimulus parameters to nerual activity"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Danica Matovic", email = "matovic.5@osu.edu"},
    {name = "Martin Haesemeyer", email = "haesemeyer.1@osu.edu"}
]
dependencies = [
    "h5py==3.14.*",
    "matplotlib==3.9.*",
    "numba==0.60.*",
    "numpy==1.26.*",
    "pandas==2.3.*",
    "PyQt5==5.15.*",
    "scipy==1.13.*",
    "tensorflow<=2.15.1",
    "upsetplot==0.9.*",
    "scikit-learn==1.6.*"
]

[project.urls]
Homepage = "https://github.com/matovic5/neuro_mine"

[project.scripts]
Mine = "neuro_mine.main:main"
