[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neuro_mine"
version = "0.9.1"
description = "Identifies the contribution of behavioural and stimulus parameters to neural activity"
readme = "README.md"
authors = [
    {name = "Danica Matovic", email = "matovic.5@osu.edu"},
    {name = "Martin Haesemeyer", email = "haesemeyer.1@osu.edu"}
]
dependencies = [
    "h5py",
    "matplotlib",
    "numba",
    "numpy",
    "pandas",
    "PySide6",
    "scipy",
    "tensorflow",
    "scikit-learn",
    "urllib3",
    "psutil"
]

[project.optional-dependencies]
docs = ["sphinx",
        "pydata-sphinx-theme",
        "sphinx-copybutton"]

[tool.setuptools]
license-files = ["LICENSE"]

[project.urls]
Homepage = "https://github.com/matovic5/neuro_mine"

[project.scripts]
Mine = "neuro_mine.main:main"
Mine-predict = "neuro_mine.main:predict"
Time-trial = "neuro_mine.main:timetrial"
Data-diagnostic = "neuro_mine.main:data_diag"
